# goer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: .gitignore  Goerfile.py
src/goer/: __init__.py  __main__.py  dep.py  depman.py  files.py  goer.py  job.py  main.py  rules.py  shell.py  text.py
tests/: test_depman.py  test_job.py  test_shell.py
