[project]
name = "goer"
readme = "README.md"
version = "0.0.1"
dependencies = ["toml"]

[project.optional-dependencies]
dev = ["ruff", "mypy==1.8.0", "types-toml"]

[project.scripts]
goer = "goer.main:main"

[tool.setuptools.package-data]
"goer" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["I001", "I002", "F401"]
